--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,14 @@ services:
       - ND_SCANSCHEDULE=1h
       # Add more Navidrome environment variables as needed
     restart: unless-stopped
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx-proxy
+    ports:
+      - "8080:4533" # HTTP reverse proxy for IPv4/IPv6
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - navidrome
+    restart: unless-stopped
